add html structure for box model padding

--- a/index.html
+++ b/index.html
@@ -7,5 +7,14 @@
     <title>CSS Box Model</title>
     <link rel="stylesheet" href="./main.css" />
   </head>
-  <body></body>
+  <body>
+    <h1>hello im learning about css box model</h1>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse aspernatur
+      fugiat commodi architecto in eligendi, voluptates sed distinctio nobis
+      vitae libero expedita, velit accusamus dolorem sapiente quidem totam
+      delectus veritatis laudantium praesentium rem repellendus reiciendis.
+      Repellendus animi facilis hic officiis.
+    </p>
+  </body>
 </html>
