add html structure for outline property

--- a/index.html
+++ b/index.html
@@ -8,13 +8,9 @@
     <link rel="stylesheet" href="./main.css" />
   </head>
   <body>
-    <h1>hello im learning about css box model</h1>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse aspernatur
-      fugiat commodi architecto in eligendi, voluptates sed distinctio nobis
-      vitae libero expedita, velit accusamus dolorem sapiente quidem totam
-      delectus veritatis laudantium praesentium rem repellendus reiciendis.
-      Repellendus animi facilis hic officiis.
-    </p>
+    <div class="links">
+      <a href="#" id="one">no outline</a>
+      <a href="#" id="two">outline</a>
+    </div>
   </body>
 </html>
